<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <ProgressBar
        android:id="@+id/prg_bar"

        android:layout_width="60dp"
        android:layout_height="60dp"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />


    <TextView
        android:id="@+id/scorebox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:text="@string/score"

        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="320dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:text="Question" />


    <Button
        android:id="@+id/option1"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/option3"
        app:layout_constraintEnd_toEndOf="@id/guideline2"

        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"



        android:textColor="@color/black"
        android:text="@string/option_1"

        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeMaxTextSize="18sp"
        android:autoSizeStepGranularity="2sp"

        tools:targetApi="o"
        android:layout_marginRight="7dp" />

    <Button
        android:id="@+id/option2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/option4"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"


        android:textColor="@color/black"
        android:text="@string/option_2"

        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeMaxTextSize="18sp"
        android:autoSizeStepGranularity="2sp"

        tools:targetApi="o" />

    <Button
        android:id="@+id/option3"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"

        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"

        android:textColor="@color/black"
        android:text="@string/option_3"

        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeMaxTextSize="18sp"
        android:autoSizeStepGranularity="2sp"

        tools:targetApi="o"

        />

    <Button
        android:id="@+id/option4"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"


        android:textColor="@color/black"
        android:text="@string/option_4"

        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeMaxTextSize="18sp"
        android:autoSizeStepGranularity="2sp"

        tools:targetApi="o"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>


